# usuarios_project

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
apps/usuarios/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/usuarios/migrations/: 0001_initial.py  0002_acudienteminor_administrativo_arbitro_atleta_juego_and_more.py
backend/: db.sqlite3  manage.py
backend/api/: admin.py  services.py  urls.py
backend/api/config/: admin.py  apps.py  equipo_viewset.py  juego_viewset.py  plataforma_viewset.py  serializers_full.py  services.py  urls.py
backend/api/migrations/: 0001_initial.py  0002_alter_usuario_codigo.py  0003_rename_equipojuego_equipo.py  0004_remove_equipo_horas_juego_remove_equipo_juego_and_more.py  0005_restore_training_flow.py  0006_acudienteatleta.py  0007_sesion_arbitro.py  0008_equipo_horas_juego.py
backend/api/models/: __init__.py  consola.py  control.py  equipo.py  juego.py  plataforma.py  sesion.py  sesionEntrenamiento.py  trofeo.py  usuario.py
backend/api/serializers/: __init__.py  equipo_serializer.py  (+5 more)
backend/esports/: settings.py  urls.py  views.py  wsgi.py
backend/frontend/: index.html
config/: settings.py  urls.py  wsgi.py
database/: schema.sql  seed.sql
docs/: diagrama_clases_centro_entrenamiento_v4_final.html  diagrama_relacional_actual.md  schema_proyecto_sena.sql
frontend/: app.js  index.html  styles.css
frontend/css/: material.css
frontend/js/: api.js  telefonos.js  usuarios.js
frontend/pages/: usuarios_detalle.html  usuarios_formulario.html
(+23 files in other folders)
