[project]
name = "usuarios_project"
version = "0.1.0"
description = "Proyecto Django para gestion de usuarios y telefonos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Django>=4.2,<5.1",
  "djangorestframework>=3.14",
  "django-filter>=24.2",
  "python-dotenv>=1.0",
  "mssql-django>=1.4",
  "pyodbc>=5.0",
  "mysqlclient>=2.2",
  "coreapi>=2.3",
  "setuptools>=69.0",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
